src/main/java/com/example/finalproject/_core/error/exception/SSRException401.java
package com.example.finalproject._core.error.exception;

public class SSRException401 extends RuntimeException{

    public SSRException401(String msg) {
        super(msg);
    }
}
